--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,5 @@ githubToken=token
 showTestStatus=false
 enableBuildSearchableOptions=false
 
-org.gradle.jvmargs=-Xmx2g
+org.gradle.jvmargs=-Xmx4g
+org.gradle.parallel=true
